kubernetes/apps/observability/oxidized/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oxidized
spec:
  hostnames:
    - oxidized.${SECRET_DOMAIN}
    - oxidized.${SECRET_INTERNAL_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: oxidized
          port: 8888
